memory-infra: make coodinator service more resiliant to stuck processes

If a client process never responds, our service will simply keep queueing
requests forever which is both wastes memory and also can cause gaps in
data collection elsewhere.

Add a hard timeout where we clear all pending requests if not responded.
Provisionally set the timeout to 15 seconds with a route for tests to
reduce this to prevent blowups in test running times.

Bug: 727785
Change-Id: Ifc36e0e09d08d6f59f8b774c5f71e7fd466a97eb
Reviewed-on: https://chromium-review.googlesource.com/824240
Commit-Queue: Lalit Maganti <lalitm@chromium.org>
Reviewed-by: Hector Dearman <hjd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525000}
Former-commit-id: e1ae19f1f2e5e63aac86c61928e284a4484b892f